--- a/style.css
+++ b/style.css
@@ -11,11 +11,11 @@
 html {
   box-sizing: border-box;
   font-size: 62.5%;
-  font-family: "Poppins", sans-serif;
+  font-family: "Inter", sans-serif;
 }
 
 body {
-  font-size: 1.6rem;
+  font-size: 1.5rem;
   line-height: 1.5;
   min-height: 100vh;
   display: flex;
@@ -38,4 +38,65 @@ h5,
 h6 {
   margin: 0;
   overflow-wrap: break-word;
+}
+
+/* STYLES FOR HEADER - FORM */
+
+h1 {
+  margin-bottom: 2rem;
+  background: linear-gradient(to right, #f32170, #ff6b08, #cf23cf, #eedd44);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  text-align: center;
+}
+
+form {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+select,
+button {
+  padding: 0.9rem 0.6rem;
+  border: 1px solid #d1d5db;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);
+  border-radius: 6px;
+  background-color: #fff;
+  font-family: inherit;
+}
+
+button {
+  font-size: 1.2rem;
+  padding: 1rem;
+}
+
+.request__container {
+  margin: 2.4rem 1.4rem;
+}
+
+/* STYLES FOR THE MAIN CONTAINER - FETCH DATA */
+
+.color__info {
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  grid-template-rows: 400px 40px;
+  row-gap: 1rem;
+}
+
+.color__code {
+  font-size: 1.2rem;
+  text-align: center;
+}
+
+/* STYLES FOR FOOTER */
+
+footer {
+  height: 10rem;
+  width: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: auto;
 }
